--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
+  "engines": {
+    "node": ">=0.10.0",
+    "npm": ">=1.3.0"
+  },
   "description": ""
 }
