--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "zwiggy",
   "version": "1.0.0",
   "engines": {
-    "node": "13.1.0",
-    "npm": "6.12.1",
-    "yarn": "1.19.1"
+    "node": "16.13.0",
+    "npm": "8.1.3"
   },
   "main": "index.js",
   "scripts": {
